# gbt-core

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  gbt_project.yaml  mkdocs.yml  pyproject.toml
connectors/neo4j/: __init__.py  connector.py
connectors/trino/: connector.py
core/gbt/cli/: main.py  types.py
core/gbt/cli/commands/: compile.py  docs.py  run.py
core/gbt/common/: datetime.py  file.py  gbt.py  jinja_parser.py  logging.py
core/gbt/engine/: base.py
core/gbt/engine/base/: destination.py  source.py
core/gbt/engine/ddl/: schema_builder.py
core/gbt/engine/destinations/neo4j/ddl/: schema_builder.py
core/gbt/engine/destinations/neo4j/dml/: append.py  delete.py
core/gbt/engine/destinations/neo4j/meta/: inspector.py
core/gbt/engine/sources/trino/: adapter.py
core/gbt/exceptions/data_type/: exceptions.py
core/gbt/parser/manifest/: loader.py  model.py
core/gbt/parser/project/: loader.py  model.py
core/gbt/templates/ddl/: create_constraint.cypher.j2  create_fulltext_index.cypher.j2  create_index.cypher.j2
core/gbt/templates/destinations/neo4j/ddl/: create_constraint.cypher.j2
core/gbt/templates/destinations/neo4j/dml/: append_node.cypher.j2  append_relation.cypher.j2  delete_constraint.cypher.j2  delete_label.cypher.j2  delete_node.cypher.j2  delete_relation.cypher.j2
core/gbt/templates/destinations/neo4j/meta/: show_constraints.cypher.j2
core/gbt/validation/data_type/: caster.py  manager.py  strategies.py
docs/: changelog.md  index.md  publish-to-pypi.md
docs/architecture/: core-engine.md  parser.md  templates.md
docs/architecture/validation/: data-type.md  overview.md
docs/getting-started/: installation.md  quickstart.md
docs/javascripts/: donate.js
docs/stylesheets/: donate.css
example/: gbt_project.yaml
example/models/neo4j/nodes/: customer.sql  package.sql
example/models/neo4j/nodes/schema/: customer.yml  schema_customer.yml  schema_package.yml  vehicle.yml
example/models/neo4j/relationship/: orders.sql
example/models/neo4j/relationship/schema/: schema_package_purchase.yaml
tests/: test_cli_commands.py  test_schema_builder_compile.py
variables/: helper.py  neo4j.py  trino.py
