[project]
name = "gbt-core"
version = "0.1.1"
description = "GBT (Graph Build Tool) - A framework for coordinating and synchronizing graph-structured data."
readme = "README.md"
requires-python = ">=3.11,<4.0"
license = { text = "MIT" }
authors = [
    { name = "Rye", email = "ldcanh03042001@gmail.com" }
]
keywords = ["neo4j", "graph", "gbt", "data-engineering", "lineage"]

# -------------------------------------------------------------------------
# DEPENDENCIES (Core libraries installed with the framework by default)
# -------------------------------------------------------------------------
dependencies = [
    "requests>=2.33.1,<3.0.0",
    "python-dotenv>=1.2.2,<2.0.0",
    "tqdm>=4.66.0,<5.0.0",
    "pandas>=2.3.0,<3.0.0",
    "pydantic>=2.11.0,<3.0.0",
    "tenacity>=9.1.0,<10.0.0",
    "structlog>=25.4.0,<26.0.0",
    "PyYAML==6.0.3",
    "Jinja2==3.1.6",
    "click==8.4.1"
]

# -------------------------------------------------------------------------
# ENTRYPOINTS (Global CLI command registration)
# -------------------------------------------------------------------------
[project.scripts]
# Upon installation, entering 'gbt' in the terminal automatically triggers the cli() function in main.py
gbt = "core.gbt.cli.main:cli"

# -------------------------------------------------------------------------
# OPTIONAL DEPENDENCIES (Optional extension packages)
# -------------------------------------------------------------------------
[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.2.0,<4.0.0",
    "sqlalchemy>=2.0.0,<3.0.0"
]

trino = [
    "trino>=0.336.0,<1.0.0",
    "sqlalchemy>=2.0.0,<3.0.0"
]

neo4j = [
    "neo4j==6.2",
    "py2neo==2021.2.4"
]

dev = [
    "pytest>=9.0.3,<10.0.0",
    "pytest-cov>=6.2.0,<7.0.0",
    "ruff>=0.12.0,<1.0.0",
    "mypy>=1.17.0,<2.0.0",
    "pre-commit>=4.3.0,<5.0.0"
]

docs = [
    "mkdocs>=1.6.0,<2.0.0",
    "mkdocs-material>=9.6.0,<10.0.0"
]

# -------------------------------------------------------------------------
# POETRY BUILD CONFIGURATION (Source code packaging declarations)
# -------------------------------------------------------------------------
[tool.poetry]
# Enable package mode to allow building .whl files for pip installation
package-mode = true

# Explicitly specify source directories to be packaged (excluding the example directory)
packages = [
    { from = ".", include = "core" },
    { from = ".", include = "connectors" },
    { from = ".", include = "variables" }
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = [
    "."
]
testpaths = [
    "tests"
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

# -------------------------------------------------------------------------
# BUILD SYSTEM (Define the backend responsible for packaging)
# -------------------------------------------------------------------------
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
